--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ PyYAML = "^6.0"
 boto3 = "^1.26.32"
 
 [tool.poetry.dev-dependencies]
+black = "^22.12.0"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
